Minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  labels: 
      app: minio
spec:
  type: NodePort
  selector:
    app: minio
  ports:
  - protocol: TCP
    nodePort: 31000
    port: 9000
    targetPort: 9000
