Minio/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  labels: 
    app: minio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minio.kubernetes.local
      http:
        paths:
          - path: /
            backend:
              servicePort: 9000
              serviceName: minio-service
